🫢 update docs + swagger + field  for get Dossier
