# src/types/file.ts
@@ -1,4 +1,4 @@
-export enum FileType {
+export enum FileTypeEnum {
   "ANNEXE" = "ANNEXE",
   "PRE_RAPPORT" = "PRE_RAPPORT",
   "RAPPORT" = "RAPPORT",
@@ -8,35 +8,47 @@ export enum FileType {
   "DOSSIER" = "DOSSIER",
 }
 
-export const FileTypeName: { [key in FileType]: string } = {
-  [FileType.ANNEXE]: "Annexe",
-  [FileType.PRE_RAPPORT]: "Pre-rapport",
-  [FileType.RAPPORT]: "Rapport",
-  [FileType.PLAN]: "Plan",
-  [FileType.DICT]: "Dict",
-  [FileType.INTERVENTION]: "Intervention",
-  [FileType.DOSSIER]: "Docs",
+export const FileTypeName: { [key in FileTypeEnum]: string } = {
+  [FileTypeEnum.ANNEXE]: "Annexe",
+  [FileTypeEnum.PRE_RAPPORT]: "Pre-rapport",
+  [FileTypeEnum.RAPPORT]: "Rapport",
+  [FileTypeEnum.PLAN]: "Plan",
+  [FileTypeEnum.DICT]: "Dict",
+  [FileTypeEnum.INTERVENTION]: "Intervention",
+  [FileTypeEnum.DOSSIER]: "Docs",
 };
 
-export const FileEmplacement: { [key in FileType]: string } = {
-  [FileType.ANNEXE]: "",
-  [FileType.PRE_RAPPORT]: "",
-  [FileType.DOSSIER]: "",
-  [FileType.RAPPORT]: "",
-  [FileType.PLAN]: "/PLAN",
-  [FileType.DICT]: "/DICT-ARRETE",
-  [FileType.INTERVENTION]: "/PHOTO-INTERVENTION",
+export const FileEmplacement: { [key in FileTypeEnum]: string } = {
+  [FileTypeEnum.ANNEXE]: "",
+  [FileTypeEnum.PRE_RAPPORT]: "",
+  [FileTypeEnum.DOSSIER]: "",
+  [FileTypeEnum.RAPPORT]: "",
+  [FileTypeEnum.PLAN]: "/PLAN",
+  [FileTypeEnum.DICT]: "/DICT-ARRETE",
+  [FileTypeEnum.INTERVENTION]: "/PHOTO-INTERVENTION",
 };
 
 export interface FileResponseUpload {
-  sucess: File[];
+  sucess: FileType[];
   errors: string[];
 }
 
-export interface File {
+export interface FileType {
   name: string;
-  type: string;
-  emplacement: string;
+  type: FileTypeEnum;
+  emplacement?: string;
   link: string;
-  date: Date;
+  date?: Date;
 }
+
+export const allFormatFile = [
+  "jpg",
+  "jpeg",
+  "png",
+  "svg",
+  "gif",
+  "ico",
+  "webp",
+  "pdf",
+  "doc",
+];
